compiler/hachi-tests/tests/snapshots/ui_tests__compiler_ui_tests@type__call_mismatched_argument_count.test.snap
---
source: compiler/hachi-tests/tests/ui_tests.rs
info:
  program: hcc
  args:
    - tests/ui/type/call_mismatched_argument_count.test
input_file: compiler/hachi-tests/tests/ui/type/call_mismatched_argument_count.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::function_type_mismatch

  × function types do not take the same number of arguments
   ╭─[tests/ui/type/call_mismatched_argument_count.test:6:11]
 5 │ fn test() {
 6 │   let k = apply_to_me(123);
   ·           ─────┬─────
   ·                ╰── the function has type fn(i32, bool) -> i32
 7 │ }
   ╰────
