compiler/hachi-tests/tests/snapshots/ui_tests__compiler_ui_tests@type__unknown_type_reference.test.snap
---
source: compiler/hachi-tests/tests/ui_tests.rs
info:
  program: hcc
  args:
    - tests/ui/type/unknown_type_reference.test
input_file: compiler/hachi-tests/tests/ui/type/unknown_type_reference.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::unknown_type

  × Everything does not name a known type
   ╭─[tests/ui/type/unknown_type_reference.test:1:13]
 1 │ fn test() -> Everything {}
   ·             ─────┬────
   ·                  ╰── could not find type Everything
   ╰────
